start make header contacts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
             <div class="header">
             <div class="contacts-inner">
                 <div class="contacts clear">
-                    <div class="phone"></div>
+                    <div class="phone">
+                        <ul>
+                            <li class="mail"><a href="mailto:info@reen.com">info@reen.com</a></li>
+                            <li class="number"><a href="">+0 (123) 456 78 90</a></li>
+                        </ul>
+                    </div>
                     <div class="icons"></div>
                 </div>
             </div>
