start make header contacts2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
                             <li class="number"><a href="">+0 (123) 456 78 90</a></li>
                         </ul>
                     </div>
-                    <div class="icons"></div>
+                    <div class="icons">
+                        <ul>
+                            <li class="facebook"><a href=""></a></li>
+                            <li class="gplus"><a href=""></a></li>
+                            <li class="twitter" <a href=""></a></li>
+                            <li class="pinterest"><a href=""></a></li>
+                            <li class="behance"><a href=""></a></li>
+                            <li class="dribbble"><a href=""></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="header__menu clear"></div>
