start make header contacts3

--- a/index.html
+++ b/index.html
@@ -29,7 +29,17 @@
                     </div>
                 </div>
             </div>
-            <div class="header__menu clear"></div>
+            <div class="header__menu clear">
+                <ul class="menu">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">Portfolio</a></li>
+                    <li><a href="/">Blog</a></li>
+                    <li><a href="/">Pages</a></li>
+                    <li><a href="/">Features</a></li>
+                    <li><a href="/">Mega Menu</a></li>
+                    <li><a href="/">Contact</a></li>
+                </ul>
+            </div>
             </div>
             <div class="main"></div> 
             <div class="footer"></div>
