--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 </div>
             </div>
             <div class="header__menu clear">
+                <div class="header-img">
+                    <img src="/img/logo.png" alt="">
+                 </div>
+                <div class="menu-inner">
                 <ul class="menu">
                     <li><a href="/">Home</a></li>
                     <li><a href="/">Portfolio</a></li>
