start make header input

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </div>
             </div>
             <div class="header__menu clear">
-                <div class="header-img">
-                    <img src="/img/logo.png" alt="">
-                 </div>
                 <div class="menu-inner">
+                <div class="header-img">
+                    <a href="/" ><img src="/img/logo.png" alt=""></a>
+                 </div>
                 <ul class="menu">
                     <li><a href="/">Home</a></li>
                     <li><a href="/">Portfolio</a></li>
@@ -43,6 +43,9 @@
                     <li><a href="/">Mega Menu</a></li>
                     <li><a href="/">Contact</a></li>
                 </ul>
+                <div class="header-find">
+                    <input type="search" name="search">
+                </div>
             </div>
             </div>
             <div class="main"></div> 
