--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="app">
-        <div class="wrapper">
-            <div class="header">
+<div class="app">
+    <div class="wrapper">
+        <div class="header">
             <div class="contacts-inner">
                 <div class="contacts clear">
                     <div class="phone">
                         <ul>
                             <li class="mail"><a href="mailto:info@reen.com">info@reen.com</a></li>
-                            <li class="number"><a href="">+0 (123) 456 78 90</a></li>
+                            <li class="number"><a href="tel:+00 (123) 456 78 90">+00 (123) 456 78 90</a></li>
                         </ul>
                     </div>
                     <div class="icons">
                         <ul>
                             <li class="facebook"><a href=""></a></li>
                             <li class="gplus"><a href=""></a></li>
-                            <li class="twitter" <a href=""></a></li>
+                            <li class="twitter"><a href=""></a></li>
                             <li class="pinterest"><a href=""></a></li>
                             <li class="behance"><a href=""></a></li>
                             <li class="dribbble"><a href=""></a></li>
@@ -29,28 +29,39 @@
                     </div>
                 </div>
             </div>
-            <div class="header__menu clear">
-                <div class="menu-inner">
-                <div class="header-img">
-                    <a href="/" ><img src="/img/logo.png" alt=""></a>
-                 </div>
-                <ul class="menu">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">Portfolio</a></li>
-                    <li><a href="/">Blog</a></li>
-                    <li><a href="/">Pages</a></li>
-                    <li><a href="/">Features</a></li>
-                    <li><a href="/">Mega Menu</a></li>
-                    <li><a href="/">Contact</a></li>
-                </ul>
-                <div class="header-find">
-                    <input type="search" name="search">
+            <div class="header__menu ">
+                <div class="menu-inner clear">
+                    <div class="header-logo">
+                        <a href="/"><img src="/img/logo.png" alt=""></a>
+                    </div>
+                    <ul class="menu">
+                        <li><a href="/">Home</a>
+                            <ul class="submenu">
+                                <li><a href="/">Portfolio</a></li>
+                                <li><a href="/">Blog</a></li>
+                                <li><a href="/">Pages</a></li>
+                                <li><a href="/">Features</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/">Portfolio</a></li>
+                        <li><a href="/">Blog</a></li>
+                        <li><a href="/">Pages</a></li>
+                        <li><a href="/">Features</a></li>
+                        <li><a href="/">Mega Menu</a></li>
+                        <li><a href="/">Contact</a></li>
+                    </ul>
+                    <div class="header-find">
+                        <form action="#">
+                            <input type="text" name="text">
+                            <input type="submit" value="" class="submit">
+                        </form>
+                    </div>
                 </div>
             </div>
-            </div>
-            <div class="main"></div> 
+            <div class="main"></div>
             <div class="footer"></div>
         </div>
     </div>
+</div>
 </body>
 </html>
