--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     </div>
                     <div class="icons">
                         <ul>
-                            <li class="facebook"><a href=""></a></li>
-                            <li class="gplus"><a href=""></a></li>
-                            <li class="twitter"><a href=""></a></li>
-                            <li class="pinterest"><a href=""></a></li>
-                            <li class="behance"><a href=""></a></li>
-                            <li class="dribbble"><a href=""></a></li>
+                            <li class="facebook"><a href="/"></a></li>
+                            <li class="gplus"><a href="/"></a></li>
+                            <li class="twitter"><a href="/"></a></li>
+                            <li class="pinterest"><a href="/"></a></li>
+                            <li class="behance"><a href="/"></a></li>
+                            <li class="dribbble"><a href="/"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -43,12 +43,54 @@
                                 <li><a href="/">Features</a></li>
                             </ul>
                         </li>
-                        <li><a href="/">Portfolio</a></li>
-                        <li><a href="/">Blog</a></li>
-                        <li><a href="/">Pages</a></li>
-                        <li><a href="/">Features</a></li>
-                        <li><a href="/">Mega Menu</a></li>
-                        <li><a href="/">Contact</a></li>
+                        <li><a href="/">Portfolio</a>
+                            <ul class="submenu">
+                                <li><a href="/">Portfolio</a></li>
+                                <li><a href="/">Blog</a></li>
+                                <li><a href="/">Pages</a></li>
+                                <li><a href="/">Features</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/">Blog</a>
+                            <ul class="submenu">
+                                <li><a href="/">Portfolio</a></li>
+                                <li><a href="/">Blog</a></li>
+                                <li><a href="/">Pages</a></li>
+                                <li><a href="/">Features</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/">Pages</a>
+                            <ul class="submenu">
+                                <li><a href="/">Portfolio</a></li>
+                                <li><a href="/">Blog</a></li>
+                                <li><a href="/">Pages</a></li>
+                                <li><a href="/">Features</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/">Features</a>
+                            <ul class="submenu">
+                                <li><a href="/">Portfolio</a></li>
+                                <li><a href="/">Blog</a></li>
+                                <li><a href="/">Pages</a></li>
+                                <li><a href="/">Features</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/">Mega Menu</a>
+                            <ul class="submenu">
+                                <li><a href="/">Portfolio</a></li>
+                                <li><a href="/">Blog</a></li>
+                                <li><a href="/">Pages</a></li>
+                                <li><a href="/">Features</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/">Contact</a>
+                            <ul class="submenu">
+                                <li><a href="/">Portfolio</a></li>
+                                <li><a href="/">Blog</a></li>
+                                <li><a href="/">Pages</a></li>
+                                <li><a href="/">Features</a></li>
+                            </ul>
+                        </li>
                     </ul>
                     <div class="header-find">
                         <form action="#">
