make main-content

--- a/index.html
+++ b/index.html
@@ -100,7 +100,15 @@
                     </div>
                 </div>
             </div>
-            <div class="main"></div>
+            <div class="main">
+                <div class="main-content">
+                    <div class="content">
+                    <h1>Made for Designers</h1>
+                    <p>Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
+                    <a href="/" class="button">Get started now</a>
+                    </div>
+                </div>
+            </div>
             <div class="footer"></div>
         </div>
     </div>
