make main-content3

--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@
                     <a href="/" class="button">Get started now</a>
                     </div>
                 </div>
+                <div class="content-info">
+                    <div class="main-info">
+                    <h2>Beautiful. Clean. Responsive.</h2>
+                    <p>REEN is a high-quality solution for those who want a beautiful website in no time. It's fully responsive and will adapt itself to any mobile device. iPad, iPhone, Android, it doesn't matter. Your content will always looks its absolute best.</p>
+                    </div>
+                <div class="latest-works">
+                    <div class="content-passion">
+                        <h3>Passion</h3>
+                        <p>Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+                    </div>
+                    <div class="content-creativity">
+                        <h3>Creativity</h3>
+                        <p>Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+                    </div>
+                    <div class="content-quality">
+                        <h3>Quality</h3>
+                        <p>Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+                    </div>
+                </div>
+            </div>
             </div>
             <div class="footer"></div>
         </div>
