make main-content

--- a/index.html
+++ b/index.html
@@ -100,19 +100,20 @@
                     </div>
                 </div>
             </div>
-            <div class="main">
-                <div class="main-content">
-                    <div class="content">
+        </div>
+        <div class="main">
+            <div class="main-content">
+                <div class="content">
                     <h1>Made for Designers</h1>
                     <p>Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
                     <a href="/" class="button">Get started now</a>
-                    </div>
                 </div>
-                <div class="content-info">
-                    <div class="main-info">
+            </div>
+            <div class="content-info">
+                <div class="main-info">
                     <h2>Beautiful. Clean. Responsive.</h2>
                     <p>REEN is a high-quality solution for those who want a beautiful website in no time. It's fully responsive and will adapt itself to any mobile device. iPad, iPhone, Android, it doesn't matter. Your content will always looks its absolute best.</p>
-                    </div>
+                </div>
                 <div class="latest-works">
                     <div class="content-passion">
                         <h3>Passion</h3>
@@ -128,9 +129,47 @@
                     </div>
                 </div>
             </div>
+            <div class="general-info">
+                <div class="slogan">
+                    <h2>Check out our latest works</h2>
+                    <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
+                </div>
+                <div class="works">
+                    <div class="frame-latest">
+                        <div class="works-img">
+                            <img src="/img/img-latest-works1.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Grand Motel gets an identity brushup</h4>
+                            <p>Identity</p>
+                        </div>
+                    </div>
+                    <div class="frame">
+                        <div class="works-img-2">
+                            <img src="/img/img-latest-works2.jpg.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Fresh branding for a creative startup</h4>
+                            <p>Identity</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider">
+                    <ul class="img">
+                        <li><a href="/"><img src="/img/img-slider1.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="/img/img-slider2.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="/img/img-slider3.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="/img/img-slider4.jpg" alt=""></a></li>
+                    </ul>
+                    <ul class="dots">
+                        <li class="control-dots"><a href=""></a></li>
+                        <li class="active"><a href=""></a></li>
+                        <li class="control-dots"><a href=""></a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer"></div>
         </div>
+        <div class="footer"></div>
     </div>
 </div>
 </body>
