--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link href="css/jquery.bxslider.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -155,7 +156,11 @@
                     </div>
                 </div>
                 <div class="slider">
-                    <ul class="img">
+                    <ul class="bxslider img">
+                        <li><a href="/"><img src="/img/img-slider1.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="/img/img-slider2.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="/img/img-slider3.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="/img/img-slider4.jpg" alt=""></a></li>
                         <li><a href="/"><img src="/img/img-slider1.jpg" alt=""></a></li>
                         <li><a href="/"><img src="/img/img-slider2.jpg" alt=""></a></li>
                         <li><a href="/"><img src="/img/img-slider3.jpg" alt=""></a></li>
@@ -168,9 +173,67 @@
                     </ul>
                 </div>
             </div>
+            <div class="information">
+                <div class="information-content">
+                <h2>Want to work with us?</h2>
+                <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
+                <a href="/" class="button-info">Get in touch</a>
+                </div>
+            </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer clear">
+            <div class="footer-info">
+                <div class="reen">
+                    <div class="footer-logo">
+                        <h4>Who we are</h4>
+                        <img src="/img/footer-logo.png" alt=""><a href=""></a>
+                        <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
+                        <a href="/" class="data">More about us</a>
+                        <p>&copy;  2014 REEN. All rights reserved.</p>
+                    </div>
+                    <div class="footer-latest-works">
+                        <h4>Latest works</h4>
+                        <img src="/img/footer-img1.jpg" alt=""><a href="/"></a>
+                        <img src="img/footer-img2.jpg" alt=""><a href="/"></a>
+                        <img src="/img/footer-img3.jpg" alt=""><a href="/"></a>
+                        <img src="/img/footer-img4.jpg" alt=""><a href="/"></a>
+                    </div>
+                    <div class="footer-touch">
+                        <h4>Get in touch</h4>
+                        <p>Doloreiur quia commolu ptatemp dolupta oreprerum tibusam eumenis et consent accullignis dentibea autem inisita.</p>
+                        <ul>
+                            <li class="search"><a href="/">84 Street, City, State 24813</a></li>
+                            <li class="mobile"><a href="tel:+00 (123) 456 78 90">+00 (123) 456 78 90</a></li>
+                            <li class="mailto"><a href="mailto:info@reen.com">info@reen.com</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-updates">
+                        <h4>Free updates</h4>
+                        <p>Conecus iure posae volor remped modis aut lor volor accabora incim resto explabo.</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="footer-menu">
+                <div class="footer-contact">
+                    <ul class="footer-nav">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/">Portfolio</a></li>
+                        <li><a href="/">Blog </a></li>
+                        <li><a href="/">About</a></li>
+                        <li><a href="/">Services</a></li>
+                        <li><a href="/">Contact</a></li>
+                    </ul>
+                    <div class="copyright">
+                        <p>&copy; 2014 REEN. All rights reserved.</p>
+                    </div>
+                 </div>
+                </div>
+            </div>
     </div>
 </div>
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.bxslider.min.js"></script>
+<script src="js/main.js"> </script>
 </body>
 </html>
