--- a/index.html
+++ b/index.html
@@ -189,7 +189,6 @@
                         <img src="/img/footer-logo.png" alt=""><a href=""></a>
                         <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
                         <a href="/" class="data">More about us</a>
-                        <p>&copy;  2014 REEN. All rights reserved.</p>
                     </div>
                     <div class="footer-latest-works">
                         <h4>Latest works</h4>
@@ -210,6 +209,12 @@
                     <div class="footer-updates">
                         <h4>Free updates</h4>
                         <p>Conecus iure posae volor remped modis aut lor volor accabora incim resto explabo.</p>
+                        <div class="footer-subscribe">
+                            <form action="">
+                                <input type="email" class="email">
+                                <input type="submit" value="SUBSCRIBE" class="submit">
+                            </form>
+                        </div>
 
                     </div>
                 </div>
