--- a/index.html
+++ b/index.html
@@ -166,11 +166,6 @@
                         <li><a href="/"><img src="/img/img-slider3.jpg" alt=""></a></li>
                         <li><a href="/"><img src="/img/img-slider4.jpg" alt=""></a></li>
                     </ul>
-                    <ul class="dots">
-                        <li class="control-dots"><a href=""></a></li>
-                        <li class="active"><a href=""></a></li>
-                        <li class="control-dots"><a href=""></a></li>
-                    </ul>
                 </div>
             </div>
             <div class="information">
@@ -181,28 +176,28 @@
                 </div>
             </div>
         </div>
-        <div class="footer clear">
+        <div class="footer">
             <div class="footer-info">
                 <div class="reen">
                     <div class="footer-logo">
                         <h4>Who we are</h4>
-                        <img src="/img/footer-logo.png" alt=""><a href=""></a>
+                        <a href="/"><img src="/img/footer-logo.png" alt=""></a>
                         <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
                         <a href="/" class="data">More about us</a>
                     </div>
                     <div class="footer-latest-works">
                         <h4>Latest works</h4>
-                        <img src="/img/footer-img1.jpg" alt=""><a href="/"></a>
-                        <img src="img/footer-img2.jpg" alt=""><a href="/"></a>
-                        <img src="/img/footer-img3.jpg" alt=""><a href="/"></a>
-                        <img src="/img/footer-img4.jpg" alt=""><a href="/"></a>
+                        <a href="/"><img src="/img/footer-img1.jpg" alt=""></a>
+                        <a href="/"><img src="img/footer-img2.jpg" alt=""></a>
+                        <a href="/"><img src="/img/footer-img3.jpg" alt=""></a>
+                        <a href="/"><img src="/img/footer-img4.jpg" alt=""></a>
                     </div>
                     <div class="footer-touch">
                         <h4>Get in touch</h4>
                         <p>Doloreiur quia commolu ptatemp dolupta oreprerum tibusam eumenis et consent accullignis dentibea autem inisita.</p>
                         <ul>
-                            <li class="search"><a href="/">84 Street, City, State 24813</a></li>
-                            <li class="mobile"><a href="tel:+00 (123) 456 78 90">+00 (123) 456 78 90</a></li>
+                            <li class="search">84 Street, City, State 24813</li>
+                            <li class="mobile"><a href="tel:+00(123)4567890">+00 (123) 456 78 90</a></li>
                             <li class="mailto"><a href="mailto:info@reen.com">info@reen.com</a></li>
                         </ul>
                     </div>
@@ -220,7 +215,7 @@
                 </div>
             </div>
             <div class="footer-menu">
-                <div class="footer-contact">
+                <div class="footer-contact clear">
                     <ul class="footer-nav">
                         <li><a href="/">Home</a></li>
                         <li><a href="/">Portfolio</a></li>
@@ -233,8 +228,8 @@
                         <p>&copy; 2014 REEN. All rights reserved.</p>
                     </div>
                  </div>
-                </div>
             </div>
+
     </div>
 </div>
 <script src="js/jquery.min.js"></script>
