--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="reen">
                     <div class="footer-logo">
                         <h4>Who we are</h4>
-                        <a href="/"><img src="/img/footer-logo.png" alt=""></a>
+                        <a href="/"><img src="/img/footer-logo.png" alt="" class="main-logo"></a>
                         <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
                         <a href="/" class="data">More about us</a>
                     </div>
@@ -229,7 +229,7 @@
                     </div>
                  </div>
             </div>
-
+        </div>
     </div>
 </div>
 <script src="js/jquery.min.js"></script>
