--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Reen</title>
     <link href="css/jquery.bxslider.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -36,66 +36,17 @@
                         <a href="/"><img src="/img/logo.png" alt=""></a>
                     </div>
                     <ul class="menu">
-                        <li><a href="/">Home</a>
-                            <ul class="submenu">
-                                <li><a href="/">Portfolio</a></li>
-                                <li><a href="/">Blog</a></li>
-                                <li><a href="/">Pages</a></li>
-                                <li><a href="/">Features</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/">Portfolio</a>
-                            <ul class="submenu">
-                                <li><a href="/">Portfolio</a></li>
-                                <li><a href="/">Blog</a></li>
-                                <li><a href="/">Pages</a></li>
-                                <li><a href="/">Features</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/">Blog</a>
-                            <ul class="submenu">
-                                <li><a href="/">Portfolio</a></li>
-                                <li><a href="/">Blog</a></li>
-                                <li><a href="/">Pages</a></li>
-                                <li><a href="/">Features</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/">Pages</a>
-                            <ul class="submenu">
-                                <li><a href="/">Portfolio</a></li>
-                                <li><a href="/">Blog</a></li>
-                                <li><a href="/">Pages</a></li>
-                                <li><a href="/">Features</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/">Features</a>
-                            <ul class="submenu">
-                                <li><a href="/">Portfolio</a></li>
-                                <li><a href="/">Blog</a></li>
-                                <li><a href="/">Pages</a></li>
-                                <li><a href="/">Features</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/">Mega Menu</a>
-                            <ul class="submenu">
-                                <li><a href="/">Portfolio</a></li>
-                                <li><a href="/">Blog</a></li>
-                                <li><a href="/">Pages</a></li>
-                                <li><a href="/">Features</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/">Contact</a>
-                            <ul class="submenu">
-                                <li><a href="/">Portfolio</a></li>
-                                <li><a href="/">Blog</a></li>
-                                <li><a href="/">Pages</a></li>
-                                <li><a href="/">Features</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/">Portfolio</a></li>
+                        <li><a href="/">Blog</a></li>
+                        <li><a href="/">Pages</a></li>
+                        <li><a href="/">Features</a></li>
+                        <li><a href="/">Mega Menu</a></li>
+                        <li><a href="/">Contact</a></li>
                     </ul>
                     <div class="header-find">
                         <form action="#">
-                            <input type="text" name="text">
+                            <input type="text" name="text" class="input hide">
                             <input type="submit" value="" class="submit">
                         </form>
                     </div>
