--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="phone">
                         <ul>
                             <li class="mail"><a href="mailto:info@reen.com">info@reen.com</a></li>
-                            <li class="number"><a href="tel:+00 (123) 456 78 90">+00 (123) 456 78 90</a></li>
+                            <li class="number"><a href="tel:+00(123)4567890">+00 (123) 456 78 90</a></li>
                         </ul>
                     </div>
                     <div class="icons">
