--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reen</title>
     <link href="css/jquery.bxslider.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css">
@@ -33,7 +34,7 @@
             <div class="header__menu ">
                 <div class="menu-inner clear">
                     <div class="header-logo">
-                        <a href="/"><img src="/img/logo.png" alt=""></a>
+                        <a href="/"><img src="img/logo.png" alt=""></a>
                     </div>
                     <ul class="menu">
                         <li><a href="/">Home</a></li>
@@ -47,7 +48,7 @@
                     <div class="header-find">
                         <form action="#">
                             <input type="text" name="text" class="input hide">
-                            <input type="submit" value="" class="submit">
+                            <span class="header-search"></span>
                         </form>
                     </div>
                 </div>
@@ -89,7 +90,7 @@
                 <div class="works">
                     <div class="frame-latest">
                         <div class="works-img">
-                            <img src="/img/img-latest-works1.jpg" alt="">
+                            <img src="img/img-latest-works1.jpg" alt="">
                         </div>
                         <div class="text">
                             <h4>Grand Motel gets an identity brushup</h4>
@@ -98,7 +99,7 @@
                     </div>
                     <div class="frame">
                         <div class="works-img-2">
-                            <img src="/img/img-latest-works2.jpg.jpg" alt="">
+                            <img src="img/img-latest-works2.jpg.jpg" alt="">
                         </div>
                         <div class="text">
                             <h4>Fresh branding for a creative startup</h4>
@@ -107,15 +108,15 @@
                     </div>
                 </div>
                 <div class="slider">
-                    <ul class="bxslider img">
-                        <li><a href="/"><img src="/img/img-slider1.jpg" alt=""></a></li>
-                        <li><a href="/"><img src="/img/img-slider2.jpg" alt=""></a></li>
-                        <li><a href="/"><img src="/img/img-slider3.jpg" alt=""></a></li>
-                        <li><a href="/"><img src="/img/img-slider4.jpg" alt=""></a></li>
-                        <li><a href="/"><img src="/img/img-slider1.jpg" alt=""></a></li>
-                        <li><a href="/"><img src="/img/img-slider2.jpg" alt=""></a></li>
-                        <li><a href="/"><img src="/img/img-slider3.jpg" alt=""></a></li>
-                        <li><a href="/"><img src="/img/img-slider4.jpg" alt=""></a></li>
+                    <ul class="bxslider img">`
+                        <li><a href="/"><img src="img/img-slider1.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="img/img-slider2.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="img/img-slider3.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="img/img-slider4.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="img/img-slider1.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="img/img-slider2.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="img/img-slider3.jpg" alt=""></a></li>
+                        <li><a href="/"><img src="img/img-slider4.jpg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -132,16 +133,16 @@
                 <div class="reen">
                     <div class="footer-logo">
                         <h4>Who we are</h4>
-                        <a href="/"><img src="/img/footer-logo.png" alt="" class="main-logo"></a>
+                        <a href="/"><img src="img/footer-logo.png" alt="" class="main-logo"></a>
                         <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
                         <a href="/" class="data">More about us</a>
                     </div>
                     <div class="footer-latest-works">
                         <h4>Latest works</h4>
-                        <a href="/"><img src="/img/footer-img1.jpg" alt=""></a>
+                        <a href="/"><img src="img/footer-img1.jpg" alt=""></a>
                         <a href="/"><img src="img/footer-img2.jpg" alt=""></a>
-                        <a href="/"><img src="/img/footer-img3.jpg" alt=""></a>
-                        <a href="/"><img src="/img/footer-img4.jpg" alt=""></a>
+                        <a href="/"><img src="img/footer-img3.jpg" alt=""></a>
+                        <a href="/"><img src="img/footer-img4.jpg" alt=""></a>
                     </div>
                     <div class="footer-touch">
                         <h4>Get in touch</h4>
